# opendkim-ng

./: AUDIT-BACKENDS---PROMT-FOR-CODE.md  AUDIT-BACKENDS.md  AUDIT-BUFFERS---PROMPT-FOR-CODE.md  AUDIT-BUFFERS.md  AUDIT-DNSSEC---PROMPT-FOR-CODE.md  AUDIT-DNSSEC.md  AUDIT-FINDINGS-A-memory-safety.md  AUDIT-FINDINGS-B-logic-security.md  AUDIT-PROMPT-A-memory-safety.md  AUDIT-PROMPT-B-logic-security.md  PATCHES.md  README.md  TODO.md
.github/workflows/: build-deb.yml
debian/: changelog  opendkim-ng.docs  opendkim-ng.install  opendkim.conf
libopendkim/: CMakeLists.txt  dkim-keys.c  dkim.c  dkim.h
libopendkim/tests/: t-conformance.c  t-test117.c  t-test154.c  t-test84.c  t-test86.c
miltertest/: CMakeLists.txt
opendkim/: opendkim-dns.c  opendkim-lua.c  opendkim-testmsg.c  opendkim.c  opendkim.conf.5  opendkim.conf.sample  opendkim.h
